<resources>
    <string name="app_name">گلدن باکس</string>
    <string name="title_activity_maps"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_set">60 متر نوساز 100 رهن کامل</string>
    <string name="estelamkod">استعلام کد رهگیری</string>
    <string name="sabtkod">ثبت کد رهگیری</string>
    <string name="gharadad">تنظیم قرارداد رهن واجاره</string>
    <string name="gharadafo">تنظیم قرارداد خرید و فروش</string>
    <string name="poshtibani">پشتیبانی</string>
    <string name="moshaver">ارتباط با مشاورین املاک</string>
    <string name="agahi">آگهی های املاک</string>
    <string name="emza">امضای دیجیتال</string>
    <string name="hoviyat">احراز هویت</string>
    <string name="chehre">تشخیص چهره</string>
    <string name="modire">ارتباط با مدیریت</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">جستجوی خونه</string>
    <string name="title_dashboard">نصب آگهی</string>
    <string name="title_notifications">آگهی های من</string>
    <string name="rahn_va_ejare">رهن و اجاره</string>
    <string name="kharid_va_forush">خرید و فروش</string>
    <string name="daste">دسته</string>
    <string name="mahal">تعیین محل</string>
    <string name="mahal1"> محل</string>
    <string name="metraj">تعیین متراژ</string>
    <string name="otagh">تعداد اتاق</string>
    <string name="jostan">پیدا کن</string>
    <string name="gheymat"> قیمت کل</string>
    <string name="tozih">توضیح درباره اگهی</string>
    <string name="gheymat1">  قیمت کل(میلیون تومان)</string>
    <string name="jare">تعیین اجاره</string>
    <string name="mozoo">نوع معامله</string>
    <string name="ejare">اجاره</string>
    <string name="forosh">فروش</string>
    <string name="aks">برای افزودن عکس روی ایکون کلیک کن</string>
    <string name="metr">متراژ به متر مربع</string>
    <string name="telephone">تلفن</string>
    <string name="ezfe">اضافه کن</string>
    <string name="onvan">عنوان آگهی</string>
    <string name="my"> شما هنوز اگهی ندارید!</string>
    <string name="varedkon_metr">متراژ را به متر مربع وارد کن
</string>
    <string name="vared_kon">قیمت کل را به تومان وارد کن</string>
    <string name="varedkon_ejare"> مقدار اجاره را به تومان وارد کن</string>
    <string name="esm"> نام</string>
    <string name="esmkha"> نام خانوادگی</string>
    <string name="kodemeli"> نام خود را وارد کنید</string>
    <string name="kodemelira"> نام خانوادگی خود را وارد کنید</string>
    <string name="esmra"> کد ملی</string>
    <string name="eskhara"> شماره همراه</string>
    <string name="gereftan_aks"> عکس بگیر</string>
    <string name="tasvircart">گرفتن تصویر کارت ملی</string>
    <string name="tasvirshenasname">گرفتن تصویر صفحه اول شناسنامه</string>
    <string name="sabtkon"> ثبت کن</string>
    <string name="kora"> کد ملی را وارد کن</string>
    <string name="shomare"> شماره ات را وارد کن</string>
    <string name="rent_contract"> ماده ۱ : طرفين قرارداد اجاره

۱-۱- موجر/ موجرين ……………………………………………… فرزند ………………………… به شماره شناسنامه ……………………………………. صادره از ……………………… کدملي ………………………………………….. متولد ………………………. ساکن ……………………………………………………………………………………….. تلفن ……………………………….. با وکالت/قيمومت/ولايت/وصايت ……………………………. فرزند …………………. به شماره شناسنامه …………………… متولد ………………….. بموجب ……………………..

۲-۱- مستأجر/ مستأجرين ……………………………………………… فرزند ………………………… به شماره شناسنامه ……………………………………. صادره از ……………………… کدملي ………………………………………….. متولد ………………………. ساکن ……………………………………………………………………………………….. تلفن ……………………………….. با وکالت/قيمومت/ولايت/وصايت ……………………………. فرزند …………………. به شماره شناسنامه …………………… متولد ………………….. بموجب ……………………..

ماده ۲: موضوع قرارداد و مشخصات مورد اجاره

عبارتست از تمليک منافع …………………… دانگ / دستگاه / يکباب  ………………………………………. واقع در ……………………………………………………………………………. داراي پلاک ثبتي شماره ………….. فرعي از …………… اصلي …………….. بخش …………….. به مساحت …………………………….. متر مربع داراي سند مالکيت بشماره سريال ………………………………………. صفحه …………. دفتر …………. بنام ……………………………………………. مشتمل بر ……………. اتاق خواب با حق استفاده برق / آب / گاز بصورت اختصاصي/ اشتراکي/ شوفاژ روشن/ غيرروشن/ کولر/ پارکينگ ……………………. فرعی به متراژ …………………. مترمربع / انباري فرعی …………………….     به متراژ …………………. متر مربع / تلفن داير/ غير داير به شماره …………………………………… و ساير لوازم و منصوبات و مشاعات مربوطه که جهت استفاده به رويت مستأجر / مستأجرين رسيده و مورد قبول قرار گرفته است .

ماده ۳ : مدت اجاره

مدت اجاره ………………………………………………… ماه / سال شمسي از تاريخ     /    /    ۱۳ الي     /    /    ۱۳  مي باشد .

ماده ۴ : اجاره بها و نحوه پرداخت

۱-۴- ميزان اجاره بها جمعاً ………………………………………… ريال ، از قرار ماهيانه مبلغ ………………………………………. ريال که در اول / آخر هر ماه به موجب قبض رسيد پرداخت مي شود .

۲-۴- مبلــغ …………………………………………………… ريال از طرف مستأجر / مستأجرين بعنوان قرض الحسنه نقداً / طي چــک به شمـــاره …………………………  بانک ………………………………… شعبه ………………………………. پرداخـــت شـــد و يا نقداً / طي چـــک به شمـــاره …………………………  بانک ………………………………. شعبه ……………………………….. در تاريخ     /    /    ۱۳ به موجر پرداخت خواهد شد . معادل مبلغ پرداختي به عنوان قرض الحسنه با انقضاء مدت اجاره و يا فسخ آن همزمان با تخليه عين مستأجره به مستأجر مسترد خواهد شد .

ماده ۵ : تسليم مورد اجاره

موجر مکلف است در تاريخ     /    /    ۱۳ مورد اجاره را با تمام توابع و ملحقات آن جهت استيفاء به مستأجر / مستأجرين تسليم کند .

ماده ۶ : شرايط و آثار قرارداد

۱-۶- مستأجر نمي تواند از مورد اجاره بر خلاف منظور قرارداد ( مسکوني ، تجاري ، اداري ) استفاده نمايد . مستأجر مکلف است به نحو متعارف از مورد اجاره استفاده نمايد .

۲-۶- مستأجر حق استفاده از مورد اجاره را به نحو مباشرت دارد و بايستي شخصاً از مورد اجاره استفاده کند . علاوه بر اين مستأجر حق انتقال و واگذاري مورد اجاره را به غير دارد / ندارد . در صورت تخلف و انتقال به غير ، اعتبار اجاره منوط به تنفيذ مالک خواهد بود در صورتيکه مستأجر مورد اجاره را به غير بدون اذن مالک تسليم کرده باشد شخص متصرف در صورت عدم تنفيذ در برابر مالک در حدود مقررات قانوني مسئول خواهد بود .

۳-۶- موجر بايد مالک يا متصرف قانوني يا قراردادي مورد اجاره باشد و در صورتيکه به عنوان ولايت ، وصايت ، وکالت ، قيمومت ، اجاره با حق انتقال و از اين قبيل اختيار اجاره دادن داشته باشد ، بايستي اسناد و مدارک مثبت حق انتقال را ضميمه کند و مشاور موظف به احراز موضوع فوق است .

۴-۶- در صورتيکه مستأجر از پرداخت اجاره بها بيش از يک ماه تاخير نمايد ، موجر مي تواند قرارداد را فسخ و تخليه مورد اجاره را از مراجع ذيصلاح بخواهد .

۵-۶- پرداخت هزينه هاي مصرفي آب / برق / گاز / تلفن / شارژ / فاضلاب شهري بر عهده مستأجر است و بايد در موعد تخليه يا فسخ قبوض پرداختي را به موجر ارائه نمايد .

۶-۶- پرداخت هزينه نگهداري آپارتمان (حق شارژ و غيره) و همچنين افزايش احتمالي آن بر مبناي مصوب مسئول يا مسئولين ساختمان بر عهده مستأجر است .

۷-۶- پرداخت هزينه تعميرات و هزينه هاي کلي از قبيل نصب و راه اندازي به منظور بهره برداري از دستگاه تهويه ، شوفاژ ، کولر ، آسانسور و شبکه آب ، برق و گاز به عهده مالک است و هزينه هاي جزيي مربوط به استفاده از مورد اجاره به عهده مستأجر است و نوع هزينه ها و ميزان آن را عرف تعيين مي کند .

۸-۶- ماليات مستغلات و تعميرات اساسي و عوارض شهرداري با موجر است و ماليات بر درآمد و مشاغل ( تجاري ، اداري ) بر عهده مستأجر مي باشد .

۹-۶- در خصوص اماکن تجاري مبلغ ……………………………………… ريال به حروف …………………………………………………………………. ريال بعنوان حق سرقفلي توسط مستأجر به موجرتسليم و پرداخت گرديد / نگرديده است .

۱۰-۶- مستأجر مکلف است در زمان تخليه ، مورد اجاره را به همان وضعي که تحويل گرفته به موجر تحويل داده و رسيد دريافت نمايد . در صورت حدوث خسارات نسبت به عين مستأجره ، مستأجر متعهد به جبران خسارت وارده خواهد بود .

۱۱-۶- موجر ملزم است در زمان تخليه نهايي و با تسويه حساب بدهيهاي زمان اجاره ، نسبت به استرداد قرض الحسنه دريافتي از مستأجر ، با اخذ رسيد اقدام نمايد .

۱۲-۶- در صورتيکه موجر نسبت به پرداخت هزينه هايي که موجب انتفاع مستأجر از ملک مي باشد ، اقدام نکند و به مستأجر نيز اجازه انجام تعميرات لازم   ندهد ، مستأجر مي تواند شخصاً نسبت به انجام تعميرات مربوطه اقدام و هزينه هاي مربوطه را با موجر محاسبه کند .

۱۳-۶- تمديد قرارداد اجاره فقط با توافق کتبي طرفين قبل از انقضاء مدت قرارداد ممکن است . در صورت تمديد قرارداد اجاره الحاقي با شرايط و تغييرات مورد توافق بخش لاينفکي از قرارداد اجاره خواهد بود .

۱۴-۶- مستأجر مکلف است به محض اتمام مدت اجاره ، عين مستأجره را بدون هيچگونه عذر و بهانه اي تخليه و به موجر تسليم نمايد ، چنانچه مستأجر مورد اجاره را رأس تاريخ انقضاء تخليه کامل ننمايد و يا به هر دليلي از تسليم آن به موجر خودداري نمايد موظف است روزانه مبلغ ………………………………………….. ريال بعنوان اجرت المثل ايام تصرف بعد از اتمام قرارداد به موجر بپردازد و تهاتر خسارت ناشي از تاخير تخليه  ( اجرت المثل ) با مبلغ قرض الحسنه بلا اشکال است .

ماده ۷

کليه خيارات ولو خيار غبن به استثناء خيار تدليس از طرفين ساقط گرديد .

ماده ۸

اين قرارداد در ساير موارد تابع مقررات قانون مدني و قانون روابط موجر و مستأجر مصوب سال ۱۳۷۶ خواهد بود .

ماده ۹

باستناد ماده ۲ قانون روابط موجر و مستأجر مصوب سال ۱۳۷۶ شهود با مشخصات زير اين قرارداد را امضاء و گواهي مي نمايند .

ماده ۱۰

حق الزحمه مشاور املاك طبق تعرفه كميسيون نظارت شهرستان …………………………………………….. به طور جداگانه به عهده طرفین است که همزمان با امضاء این قرارداد مبلغ …………………………………… ریال پرداخت شده و رسید دریافت نمایند . فسخ یا اقاله قرارداد تأثیری در میزان حق الزحمه نخواهد داشت .

ماده ۱۱

اين قرارداد در تاريخ     /    /    ۱۳ ساعت ……………… در دفتر مشاور املاک …………………………… به نشاني …………………………………………………………………….  در سه نسخه بين طرفين تنظيم ، امضاء و مبادله گرديد . مشاور املاک مکلف است نسخ قرارداد را ممهور به مهر مشاور و نسخه اول و دوم را به موجر و مستأجر تسليم نمايد و نسخه سوم را در دفتر مخصوص بايگاني کند و هر سه نسخه داراي اعتبار واحد است .

ماده ۱۲

موارد حقوقي مفاد اين قرارداد مطابق با مقررات جاري است و تاييد مي شود</string>
    <string name="emza_mostajer">امضای دیجیتال مستاجر</string>
    <string name="emza_render">امضای دیجیتال موجر</string>
</resources>