<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"


    tools:context=".Main3Activity"
    android:layoutDirection="rtl">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableRight="@drawable/ic_noe"
            android:text="@string/esm"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kodemeli"
                android:textColor="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-------------------------------------------------------------------------------"
            android:textColor="@color/colorPrimaryDark" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableRight="@drawable/ic_noe"
            android:text="@string/esmkha"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kodemelira"
                android:textColor="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-------------------------------------------------------------------------------"
            android:textColor="@color/colorPrimaryDark" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableRight="@drawable/ic_noe"
            android:text="@string/esmra"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
android:hint="@string/kora"
            android:inputType="number" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-------------------------------------------------------------------------------"
            android:textColor="@color/colorPrimaryDark" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableRight="@drawable/ic_noe"
            android:text="@string/eskhara"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/shomare"
            android:inputType="phone" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-------------------------------------------------------------------------------"
            android:textColor="@color/colorPrimaryDark" />
        <TextView
            android:onClick="openCamera2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableRight="@drawable/ic_noe"
            android:text="@string/tasvircart"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cama"
            android:onClick="openCamera2"
android:layout_gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-------------------------------------------------------------------------------"
            android:textColor="@color/colorPrimaryDark" />
        <TextView
            android:onClick="openCamera1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableRight="@drawable/ic_noe"
            android:text="@string/tasvirshenasname"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cama"
            android:onClick="openCamera1"
android:layout_gravity="center"

            />
        <Button
android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="100dp"
            android:text="@string/sabtkon"
            android:textColor="@color/colorPrimary" />


    </LinearLayout>


</ScrollView>