<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">
<FrameLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:onClick="dclick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daste"
            android:drawableRight="@drawable/ic_daste2"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
android:layout_margin="10dp"
            android:padding="-14dp"/>
        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-------------------------------------------------------------------------------"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mahal"
            android:drawableRight="@drawable/ic_mahal"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:layout_margin="10dp"
            android:padding="-14dp"/>
        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-------------------------------------------------------------------------------"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/metraj"
            android:drawableRight="@drawable/ic_metrj"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:layout_margin="10dp"
            android:padding="-14dp"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tozih"
                android:textColor="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-------------------------------------------------------------------------------"/>
        <TextView
            android:onClick="bclick1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otagh"
            android:drawableRight="@drawable/ic_room"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:layout_margin="10dp"
            android:padding="-14dp"/>
        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-------------------------------------------------------------------------------"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/varedkon_metr"
                android:textColor="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-------------------------------------------------------------------------------"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gheymat"
            android:drawableRight="@drawable/ic_gheymat"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:layout_margin="10dp"
            android:padding="-14dp"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vared_kon"
                android:textColor="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-------------------------------------------------------------------------------"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jare"
            android:drawableRight="@drawable/ic_ejare"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:layout_margin="10dp"
            android:padding="-14dp"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/varedkon_ejare"
                android:textColor="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_marginBottom="80dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jostan"
            android:shadowColor="@color/colorAccent"
android:background="@color/colorPrimaryDark"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>
    <LinearLayout
        android:background="@color/colorPrimaryDark"
        android:id="@+id/line11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <Button
            android:onClick="b1click1"
            android:id="@+id/b1"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1" />
        <Button
            android:onClick="b2click1"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2" />
        <Button
            android:onClick="b3click1"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3" />
        <Button
            android:onClick="b4click1"
            android:layout_width="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:text="4" />
        <Button
            android:onClick="b5click1"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5" />
        <Button
            android:onClick="b6click1"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/daste1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="80dp"
        android:visibility="invisible">
        <Button
            android:onClick="dclick1"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rahn_va_ejare"/>
        <Button
            android:textColor="@color/colorPrimary"
            android:onClick="dclick2"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kharid_va_forush"/>

    </LinearLayout>



</FrameLayout>
</ScrollView>