<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rent_contract">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_margin="30dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rent_contract"
            android:textColor="@color/colorPrimary"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:text="@string/emza_mostajer"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content" />
            <Button
                android:text="@string/emza_render"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>